# LexiLab

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  docker-compose.yml  env.example  main.py  middleware.py  railway.json  requirements.txt
api/: limits.py  schemas.py
api/routes/: analyze.py  datasets.py  stats.py
core/: collocations.py  frequency.py  preprocessing.py  run_comparison.py  test_preprocessing.py
core/comparison/: baselines.py
datasets/en/: en_01_nlp_science.txt  en_02_tech_news.txt  en_03_literary_prose.txt  en_04_corpus_linguistics.txt  en_05_software_engineering.txt  en_06_psychology.txt  en_07_climate.txt  en_08_economics.txt  en_09_history.txt  en_10_philosophy.txt
datasets/mixed/: mixed_01_it_tech.txt  mixed_02_science.txt  mixed_03_marketing.txt  mixed_04_academic.txt  mixed_05_finance.txt  mixed_06_medicine.txt  mixed_07_education.txt  mixed_08_environment.txt  mixed_09_culture_media.txt  mixed_10_large_corpus.txt
datasets/ua/: ua_01_nlp_science.txt  ua_02_news_tech.txt  ua_03_literary_poetry.txt  ua_04_legal.txt  ua_05_encyclopedia_kyiv.txt  ua_06_prose_fiction.txt  ua_07_linguistics_academic.txt  ua_08_economics.txt  ua_09_history.txt  ua_10_medicine.txt
db/: database.py  models.py  schema.sql  schemas.py
frontend/: app.js  index.html
rust_module/: Cargo.toml  lib.rs
rust_module/src/: lib.rs
